--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -158,7 +158,10 @@
           <footer>
             {% if site.back_to_top %}
               <p><a href="#top" id="back-to-top">{{ site.back_to_top_text }}</a></p>
+	
             {% endif %}
+		  
+		  <p class="text-small text-grey-dk-100 mb-0">Support this site with BTC, BCH, or BSV: <code>17MEahERxZH6pwWy4z7wWBZvH4rRnv3F7i</code></p>
 
             {{ footer_custom }}
 
