--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -334,6 +334,6 @@ document.onmousedown = document.onmouseup = function(e) {
   }
 };
 </script>
-
+<!---The Times 03/Jan/2009 Chancellor on brink of second bailout for banks--->
 </body>
 </html>
