--- a/_includes/head.html
+++ b/_includes/head.html
@@ -1,5 +1,5 @@
 <head>
-<!---  
+<!---  Send me all your Bitcoins: 17MEahERxZH6pwWy4z7wWBZvH4rRnv3F7i   !!!!
                  ,.=ctE55ttt553tzs.,                               
              ,,c5;z==!!::::  .::7:==it3>.,                         
           ,xC;z!::::::    ::::::::::::!=c33x,                      
