--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -63,7 +63,7 @@
       {% endif %}
     </nav>
     <footer class="site-footer">
-      This site uses <a href="https://github.com/pmarsceill/just-the-docs">Just the Docs</a>, a documentation theme for Jekyll.
+      This site uses <a href="https://github.com/wakgill/bitcoin-archive">Jekyll</a>.
     </footer>
   </div>
   <div class="main" id="top">
