--- a/_includes/head.html
+++ b/_includes/head.html
@@ -64,10 +64,22 @@ body.dark-theme {
   background: #141821;
   color: #eee
 }
-body.dark-theme h1,
+body.dark-theme h1,h2,h3,h4,h5,h6
 body.dark-theme p {
   color: #eee;
 }
+body.dark-theme code {
+ 
+background-color: #302d36;
+border: 1px solid #44434d;
+
+}
+ body.dark-theme div.highlighter-rouge {
+    background-color: #302d36;
+
+}
+  
+  
 /*body.dark-theme a {
   color: #809fff;
 }  */
