--- a/_includes/head.html
+++ b/_includes/head.html
@@ -64,8 +64,7 @@ body.dark-theme {
   background: #141821;
   color: #eee
 }
-body.dark-theme h1,h2,h3,h4,h5,h6
-body.dark-theme p {
+body.dark-theme h1,h2,h3,h4,h5,h6 {
   color: #eee;
 }
 body.dark-theme code {
