--- a/_includes/head.html
+++ b/_includes/head.html
@@ -65,7 +65,7 @@ body.dark-theme {
   color: #eee
 }
 body.dark-theme h1,h2,h3,h4,h5,h6 {
-  color: #eee;
+  color: #eee !important;
 }
 body.dark-theme code {
  
@@ -76,6 +76,15 @@ border: 1px solid #44434d;
  body.dark-theme div.highlighter-rouge {
     background-color: #302d36;
 
+}
+  
+  body.dark-theme .search-input {
+    background-color: #151821;
+
+} 
+  
+  body.dark-theme .aux-nav {
+    background: #151821;
 }
   
   
