--- a/_includes/head.html
+++ b/_includes/head.html
@@ -86,6 +86,16 @@ border: 1px solid #44434d;
   body.dark-theme .aux-nav {
     background: #151821;
 }
+body.dark-theme  .search {
+  
+    background: #151821;
+}
+  
+body.dark-theme .search-results {
+   
+    background-color: #231f25;
+   
+}
   
   
 /*body.dark-theme a {
