--- a/_includes/head.html
+++ b/_includes/head.html
@@ -64,8 +64,23 @@ body.dark-theme {
   background: #141821;
   color: #eee
 }
-body.dark-theme h1,h2,h3,h4,h5,h6 {
-  color: #eee !important;
+body.dark-theme h1 {
+  color: #eee;
+}
+  body.dark-theme h2 {
+  color: #eee;
+}
+  body.dark-theme h3 {
+  color: #eee;
+}
+  body.dark-theme h4 {
+  color: #eee;
+}
+  body.dark-theme h5 {
+  color: #eee;
+}
+  body.dark-theme h6 {
+  color: #eee;
 }
 body.dark-theme code {
  
