--- a/_includes/head.html
+++ b/_includes/head.html
@@ -113,6 +113,12 @@ body.dark-theme .search-results {
    
 }
   
+body.dark-theme  .btn{
+   background-color: #2e2b33;
+}
+
+
+  
   
 /*body.dark-theme a {
   color: #809fff;
