--- a/_includes/head.html
+++ b/_includes/head.html
@@ -113,11 +113,15 @@ body.dark-theme .search-results {
    
 }
   
-body.dark-theme  .btn{
+body.dark-theme .btn{
    background-color: #2e2b33;
 }
 
+body.dark-theme .side-bar {
+  
+    border-right: 1px solid #312d35;
 
+}
   
   
 /*body.dark-theme a {
