--- a/_includes/head.html
+++ b/_includes/head.html
@@ -122,7 +122,14 @@ body.dark-theme .side-bar {
     border-right: 1px solid #312d35;
 
 }
+body.dark-theme .main-header {
+    border-bottom: 1px solid #312d35;
+}  
   
+  body.dark-theme hr {
+    background-color: #312d35;
+
+}
   
 /*body.dark-theme a {
   color: #809fff;
