--- a/_includes/head.html
+++ b/_includes/head.html
@@ -131,6 +131,11 @@ body.dark-theme .main-header {
 
 }
   
+  body.dark-theme .site-header {
+
+    border-bottom: 1px solid #312d35;
+}  
+  
 /*body.dark-theme a {
   color: #809fff;
 }  */
