--- a/_includes/head.html
+++ b/_includes/head.html
@@ -134,7 +134,10 @@ body.dark-theme .main-header {
   body.dark-theme .site-header {
 
     border-bottom: 1px solid #312d35;
-}  
+} 
+  body.dark-theme img {
+    opacity: 75%;
+  }
   
 /*body.dark-theme a {
   color: #809fff;
