--- a/_includes/head.html
+++ b/_includes/head.html
@@ -62,25 +62,25 @@ E:.    (::::::::::::L    .......       \:::::::!  ::|i3    BLAH
 }
 body.dark-theme {
   background: #141821;
-  color: #eee
+  color: #888888;
 }
 body.dark-theme h1 {
-  color: #eee;
+  color: #9893a2;
 }
   body.dark-theme h2 {
-  color: #eee;
+  color: #9893a2;
 }
   body.dark-theme h3 {
-  color: #eee;
+  color: #9893a2;
 }
   body.dark-theme h4 {
-  color: #eee;
+  color: #9893a2;
 }
   body.dark-theme h5 {
-  color: #eee;
+  color: #9893a2;
 }
   body.dark-theme h6 {
-  color: #eee;
+  color: #9893a2;
 }
 body.dark-theme code {
  
@@ -95,7 +95,7 @@ border: 1px solid #44434d;
   
   body.dark-theme .search-input {
     background-color: #151821;
-    color: #eee;
+    color: #888888;
 
 } 
   
@@ -138,6 +138,10 @@ body.dark-theme .main-header {
   body.dark-theme img {
     opacity: 75%;
   }
+  
+ body.dark-theme .nav-list .nav-list-item>.nav-list .nav-list-item .nav-list-link {
+    color: #888888;
+}
   
 /*body.dark-theme a {
   color: #809fff;
