--- a/_includes/head.html
+++ b/_includes/head.html
@@ -65,22 +65,22 @@ body.dark-theme {
   color: #888888;
 }
 body.dark-theme h1 {
-  color: #9893a2;
+  color: #888;
 }
   body.dark-theme h2 {
-  color: #9893a2;
+  color:#888;
 }
   body.dark-theme h3 {
-  color: #9893a2;
+  color: #888;
 }
   body.dark-theme h4 {
-  color: #9893a2;
+  color:#888;
 }
   body.dark-theme h5 {
-  color: #9893a2;
+  color: #888;
 }
   body.dark-theme h6 {
-  color: #9893a2;
+  color: #888;
 }
 body.dark-theme code {
  
