--- a/_includes/head.html
+++ b/_includes/head.html
@@ -62,25 +62,25 @@ E:.    (::::::::::::L    .......       \:::::::!  ::|i3    BLAH
 }
 body.dark-theme {
   background: #141821;
-  color: #888888;
+  color: #aaaaaa;
 }
 body.dark-theme h1 {
-  color: #888;
+  color: #aaaaaa;
 }
   body.dark-theme h2 {
-  color:#888;
+  color:#aaaaaa;
 }
   body.dark-theme h3 {
-  color: #888;
+  color: #aaaaaa;
 }
   body.dark-theme h4 {
-  color:#888;
+  color:#aaaaaa;
 }
   body.dark-theme h5 {
-  color: #888;
+  color: #aaaaaa;
 }
   body.dark-theme h6 {
-  color: #888;
+  color: #aaaaaa;
 }
 body.dark-theme code {
  
@@ -95,7 +95,7 @@ border: 1px solid #44434d;
   
   body.dark-theme .search-input {
     background-color: #151821;
-    color: #888888;
+    color: #aaaaaa;
 
 } 
   
@@ -140,7 +140,7 @@ body.dark-theme .main-header {
   }
   
  body.dark-theme .nav-list .nav-list-item>.nav-list .nav-list-item .nav-list-link {
-    color: #888888;
+    color: #aaaaaa;
 }
   
 /*body.dark-theme a {
