--- a/_includes/head.html
+++ b/_includes/head.html
@@ -30,7 +30,9 @@ E:.    (::::::::::::L    .......       \:::::::!  ::|i3    BLAH
   --->
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=Edge">
-
+<!-- Fathom - beautiful, simple website analytics -->
+<script src="https://cdn.usefathom.com/script.js" data-site="FTQKOWIF" defer></script>
+<!-- / Fathom -->
   {% unless site.plugins contains "jekyll-seo-tag" %}
     <title>{{ page.title }} - {{ site.title }}</title>
 
