--- a/_includes/head.html
+++ b/_includes/head.html
@@ -135,7 +135,7 @@ body.dark-theme .main-header {
   
   body.dark-theme .site-header {
 
-    border-bottom: 1px solid #312d35;
+    border-bottom: 1px solid #3f3f3f;
 } 
   body.dark-theme img {
     opacity: 75%;
