--- a/_includes/head.html
+++ b/_includes/head.html
@@ -40,7 +40,7 @@ E:.    (::::::::::::L    .......       \:::::::!  ::|i3    BLAH
       <meta name="Description" content="{{ page.description }}">
     {% endif %}
   {% endunless %}
-<link rel="icon" href="https://bitcoin.com/favicon-32x32.png?v=839c20236a994c437231f424e0f6730a" type="image/png"/>
+<!--- <link rel="icon" href="https://bitcoin.com/favicon-32x32.png?v=839c20236a994c437231f424e0f6730a" type="image/png"/>--->
   <link rel="shortcut icon" href="{{ 'favicon.ico' | relative_url }}" type="image/x-icon">
 <style>
 /* width */
