fix hash scroll to be below sticky navbar

--- a/_includes/head.html
+++ b/_includes/head.html
@@ -376,7 +376,18 @@
       margin-bottom: 1em;
       font-weight: 500;
       line-height: 1.25;
-      color: #27262b
+      color: #27262b;
+    }
+
+    @media (min-width: 50rem) {
+      h1,
+      h2,
+      h3,
+      h4,
+      h5,
+      h6 {
+        scroll-margin-top: 90px;
+      }
     }
 
     p {
