--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -332,7 +332,22 @@
   <script crossorigin src="https://unpkg.com/react-dom@17/umd/react-dom.production.min.js"></script>
   <script src="https://navbar.cloud.bitcoin.com/navbar.js"></script>
   <script src="https://footer.cloud.bitcoin.com/footer.js"></script>
-  <script>matchTheme()</script>
+  <script>
+    matchTheme();
+    
+    function matchTheme() {
+      const currentTheme = localStorage.getItem("theme");
+      if (window.bitcoinComNavbar) {
+        if (currentTheme === "dark") {
+          document.body.classList.add("dark-theme")
+          window.bitcoinComNavbar.setContrast(true);
+        } else {
+          document.body.classList.remove("dark-theme");
+          window.bitcoinComNavbar.setContrast(false);
+        }
+      }
+    }
+  </script>
   <script>
     const btn = document.querySelector(".btn-toggle");
 
