--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -4,6 +4,12 @@
 {% include head.html %}
 
 <body>
+  <script>
+    const theme = localStorage.getItem('theme');
+    if (theme === "dark") {
+      document.documentElement.setAttribute('data-theme', 'dark');
+    }
+  </script>
   <div id="bitcoincom-wgt-navbar"></div>
   <div class="container">
     <svg xmlns="http://www.w3.org/2000/svg" style="display: none;">
@@ -333,39 +339,39 @@
   <script src="https://navbar.cloud.bitcoin.com/navbar.js"></script>
   <script src="https://footer.cloud.bitcoin.com/footer.js"></script>
   <script>
-    matchTheme();
-    
-    function matchTheme() {
-      const currentTheme = localStorage.getItem("theme");
-      if (window.bitcoinComNavbar) {
-        if (currentTheme === "dark") {
-          document.body.classList.add("dark-theme")
-          window.bitcoinComNavbar.setContrast(true);
-        } else {
-          document.body.classList.remove("dark-theme");
-          window.bitcoinComNavbar.setContrast(false);
-        }
-      }
-    }
-  </script>
-  <script>
     const btn = document.querySelector(".btn-toggle");
 
-    const currentTheme = localStorage.getItem("theme");
+    btn.addEventListener("click", modeSwitcher)
 
-    btn.addEventListener("click", function () {
-      document.body.classList.toggle("dark-theme");
-
-      let theme = "light";
-      if (document.body.classList.contains("dark-theme")) {
-        theme = "dark";
-        window.bitcoinComNavbar.setContrast(true);
+    if  (theme === "dark") {
+        dark();
+      } else {
+        light();
       }
-      if (theme === "light") {
+
+      function modeSwitcher() {
+        let currentMode = document.documentElement.getAttribute('data-theme');
+        if (currentMode === "dark") {
+          light();
+        } else {
+          dark();
+        }
+      }
+
+      function light() {
+        document.documentElement.setAttribute('data-theme', 'light');
+        document.body.classList.remove("dark-theme");
+        window.localStorage.setItem('theme', 'light');
         window.bitcoinComNavbar.setContrast(false);
       }
-      localStorage.setItem("theme", theme);
-    });
+
+      function dark() {
+        document.documentElement.setAttribute('data-theme', 'dark');
+        document.body.classList.add("dark-theme");
+        window.localStorage.setItem('theme', 'dark');
+        window.bitcoinComNavbar.setContrast(true);
+      }
+
   </script>
   <!---The Times 03/Jan/2009 Chancellor on brink of second bailout for banks--->
 </body>
