--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -38,32 +38,26 @@ html, html[data-theme="light"] {
 
 body.dark-theme h1 {
   color: rgb(251, 252, 255);
-  font-size: 14px;
 }
 
 body.dark-theme h2 {
   color: rgb(251, 252, 255);
-  font-size: 14px;
 }
 
 body.dark-theme h3 {
   color: rgb(251, 252, 255);
-  font-size: 14px;
 }
 
 body.dark-theme h4 {
   color: rgb(251, 252, 255);
-  font-size: 14px;
 }
 
 body.dark-theme h5 {
   color: rgb(251, 252, 255);
-  font-size: 14px;
 }
 
 body.dark-theme h6 {
   color: rgb(251, 252, 255);
-  font-size: 14px;
 }
 
 body.dark-theme code {
@@ -90,10 +84,6 @@ body.dark-theme .search {
 
 body.dark-theme .search-results {
   background-color: #231f25;
-}
-
-body.dark-theme .btn {
-  background-color: #2e2b33;
 }
 
 body.dark-theme .side-bar {
@@ -131,6 +121,7 @@ pre {
 }
 
 body {
+  font-family: Gilroy, sans-serif, sans-serif;
   margin: 0;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
@@ -138,11 +129,6 @@ body {
 
 main {
   display: block;
-}
-
-h1 {
-  font-size: 2em;
-  margin: 0.67em 0;
 }
 
 hr {
@@ -158,6 +144,9 @@ pre {
 
 a {
   background-color: transparent;
+  color: rgb(10, 193, 142);
+  font-weight: 600;
+  text-decoration: none;
 }
 
 abbr[title] {
@@ -317,13 +306,6 @@ template {
   /*#7253ed*/
 }
 
-body {
-  font-family: Gilroy, sans-serif, sans-serif;
-  font-size: inherit;
-  line-height: 1.4;
-
-}
-
 ol,
 ul,
 dl,
@@ -366,12 +348,16 @@ h6 {
 p {
   margin-top: 1em;
   margin-bottom: 1em;
+  font-size: 14px;
+  line-height: 20px;
 }
 
-a {
-  color: #00c98e;
-  /*#7253ed;*/
-  text-decoration: none;
+
+@media (min-width: 50rem) {
+  p {
+    font-size: 20px;
+    line-height: 28px;
+  }
 }
 
 a:not([class]) {
@@ -380,7 +366,6 @@ a:not([class]) {
 
 code {
   font-family: 'SFMono-Regular', Menlo, Consolas, Monospace;
-  font-size: 0.75em;
   line-height: 1.4;
 }
 
@@ -740,6 +725,24 @@ body {
   list-style: none;
 }
 
+.main-content ul a {
+  color:rgb(19, 23, 32);
+  font-weight: 500;
+  font-size: 14px;
+  line-height: 20px;
+}
+
+body.dark-theme .main-content ul a {
+  color: #aaaaaa;
+}
+
+@media (min-width: 50rem) {
+  .main-content ul a {
+    font-size: 20px;
+    line-height: 28px;
+  }
+}
+
 .main-content ul > li::before {
   position: absolute;
   margin-left: -1.4em;
@@ -930,26 +933,26 @@ body {
 }
 
 .nav-list .nav-list-item {
-  font-size: 14px !important;
+  font-size: 20px !important;
   position: relative;
   margin: 0;
 }
 
 @media (min-width: 31.25rem) {
   .nav-list .nav-list-item {
-    font-size: 16px !important;
+    font-size: 20px !important;
   }
 }
 
 @media (min-width: 50rem) {
   .nav-list .nav-list-item {
-    font-size: 12px !important;
+    font-size: 20px !important;
   }
 }
 
 @media (min-width: 50rem) and (min-width: 31.25rem) {
   .nav-list .nav-list-item {
-    font-size: 14px !important;
+    font-size: 20px !important;
   }
 }
 
@@ -965,7 +968,7 @@ body {
 }
 
 body.dark-theme .nav-list .nav-list-item .nav-list-link {
-  color: #fbfcff;
+  color: #aaaaaa;
 }
 
 @media (min-width: 50rem) {
@@ -1127,12 +1130,12 @@ body.dark-theme .nav-list .nav-list-item .nav-list-link {
 
 .breadcrumb-nav-list-item {
   display: table-cell;
-  font-size: 11px !important;
+  font-size: 14px;
 }
 
 @media (min-width: 31.25rem) {
   .breadcrumb-nav-list-item {
-    font-size: 12px !important;
+    font-size: 12px;
   }
 }
 
@@ -1155,55 +1158,90 @@ body.dark-theme .nav-list .nav-list-item .nav-list-link {
 
 h1,
 .text-alpha {
-  font-size: 32px !important;
-  line-height: 1.25;
-  font-weight: 300;
+  color: rgb(19, 23, 32);
+  font-weight: 700;
+  font-size: 32px;
+  line-height: 40px;
 }
 
 @media (min-width: 31.25rem) {
   h1,
   .text-alpha {
-    font-size: 36px !important;
+    font-size: 48px;
+    line-height: 52px;
+    letter-spacing: -0.53px;
+  }
+}
+
+@media (min-width: 50rem) {
+  h1,
+  .text-alpha {
+    font-size: 64px;
+    line-height: 72px;
+    letter-spacing: -0.7px;
   }
 }
 
 h2,
 .text-beta {
-  font-size: 18px !important;
+  font-weight: 700;
+  font-size: 20px;
 }
 
 @media (min-width: 31.25rem) {
   h2,
   .text-beta {
-    font-size: 24px !important;
-    line-height: 1.25;
+    font-size: 32px;
+    letter-spacing: -0.35px;
+  }
+}
+
+@media (min-width: 50rem) {
+  h2,
+  .text-beta {
+    font-size: 40px;
+    line-height: 40px;
+    letter-spacing: -0.7px;
   }
 }
 
 h3,
 .text-gamma {
-  font-size: 16px !important;
+  font-size: 24px;
+  line-height: 32px;
+  font-weight: 700;
 }
 
 @media (min-width: 31.25rem) {
   h3,
   .text-gamma {
-    font-size: 18px !important;
+    font-size: 32px;
+    line-height: 40px;
+  }
+}
+
+@media (min-width: 50rem) {
+  h3,
+  .text-gamma {
+    font-size: 20px;
+    line-height: 28px;
   }
 }
 
 h4,
 .text-delta {
-  font-size: 11px !important;
+  font-size: 14px;
+  line-height: 20px; 
   font-weight: 400;
   text-transform: uppercase;
   letter-spacing: 0.1em;
 }
 
-@media (min-width: 31.25rem) {
+@media (min-width: 50rem) {
   h4,
   .text-delta {
-    font-size: 12px !important;
+    font-size: 20px;
+    line-height: 28px;
   }
 }
 
@@ -1307,24 +1345,23 @@ h6,
 .btn {
   display: inline-block;
   box-sizing: border-box;
-  padding-top: 0.3em;
-  padding-right: 1em;
-  padding-bottom: 0.3em;
-  padding-left: 1em;
+  padding-top: 7px;
+  padding-right: 16px;
+  padding-bottom: 7px;
+  padding-left: 16px;
   margin: 0;
   font-family: inherit;
   font-size: inherit;
   font-weight: 500;
   line-height: 1.5;
-  color: #00c98e;
-  /*#7253ed;*/
+  color: rgb(19, 23, 32);
   text-decoration: none;
   vertical-align: baseline;
   cursor: pointer;
-  background-color: #f7f7f7;
-  border-width: 0;
-  border-radius: 4px;
-  box-shadow: 0 1px 2px rgba(0, 0, 0, 0.12), 0 3px 10px rgba(0, 0, 0, 0.08);
+  background:rgb(251, 252, 255);
+  border: 1px solid rgb(200, 205, 216);
+  border-radius: 3px;
+  box-shadow: rgb(0 0 0 / 5%) 0px 2px 4px 0px;
   appearance: none;
 }
 
@@ -1358,10 +1395,6 @@ h6,
   background-color: #efefef;
   background-image: none;
   box-shadow: inset 0 2px 4px rgba(0, 0, 0, 0.15);
-}
-
-.btn.selected:hover {
-  background-color: #cfcfcf;
 }
 
 .btn:disabled,
@@ -1403,31 +1436,28 @@ h6,
 }
 
 .btn-primary {
-  color: #fff;
-  background-color: #00c98e;
-  /*background-color:#5739ce;background-image:linear-gradient(#6f55d5, #5739ce);*/
-  box-shadow: 0 1px 3px rgba(0, 0, 0, 0.25), 0 4px 10px rgba(0, 0, 0, 0.12);
+  color: #ffffff;
+  background: url("https://menu.cdn.bitcoindotcom.net/uni/dist/assets/images/btn.png") 100% 100%;
+  box-shadow: inset 0 0.5px 0 0 rgba(255, 255, 255, 0.5);
+  padding-top: 8px;
+  padding-right: 17px;
+  padding-bottom: 8px;
+  padding-left: 17px;
+  border: none;
 }
 
 .btn-primary:hover,
 .btn-primary.zeroclipboard-is-hover {
-  color: #fff;
-  background-color: #49505f;
-}
-
-body.dark-theme .btn-primary:hover {
-  background-color: #0ac18e;
-}
-
-body.dark-theme .btn:hover {
-  color: #fff;
+  color: #ffffff;
+  opacity: 1;
+  background: url("https://menu.cdn.bitcoindotcom.net/uni/dist/assets/images/btn_h.png") 100% 100%;
+  transition: all 150ms ease-in-out; 
 }
 
 .btn-primary:active,
 .btn-primary.selected,
 .btn-primary.zeroclipboard-is-active {
-  background-color: #49505f;
-  background-image: none;
+  background: url("https://menu.cdn.bitcoindotcom.net/uni/dist/assets/images/btn_a.png");
   box-shadow: inset 0 2px 4px rgba(0, 0, 0, 0.15);
 }
 
